feat: fee projection